--- a/employee.html
+++ b/employee.html
@@ -175,13 +175,14 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>1</td>
-                                    <td>Nimal Perera</td>
-                                    <td>200089546327</td>
-                                    <td>0774589652</td>
-                                    <td>nimal.p@gmail.com</td>
-                                    <td>Married</td>
-                                    <td>Active</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
                                     <td>
                                         <button class="options-btn"><i class="fa-solid fa-eye"
                                                 style="color: #071731;"></i></button>
@@ -216,8 +217,8 @@
                         <div class="card">
                             <img src="../images/bg.png" class="card-img" alt="Background Image">
                             <div class="card-img-overlay d-flex align-items-center justify-content-center">
-
                                 <div class="card-body scrollable-card">
+
                                     <!--required mark-->
                                     <div class="row">
                                         <div class="col-12 fw-bold text-end">
@@ -359,13 +360,13 @@
                                         <!--create user and clear button-->
                                         <div class="row mt-5">
                                             <div class="col-6 text-start">
-                                                <button type="reset" id="submit" value="Clear"
+                                                <button type="reset" id="buttonClear" value="Clear"
                                                     class="btn btn-secondary"><i class="fa-solid fa-eraser"
                                                         style="color: #ffffff;"></i> Clear</button>
                                             </div>
 
                                             <div class="col-6 text-start">
-                                                <button type="submit" id="submit" value="Add Employee"
+                                                <button type="submit" id="buttonSubmit" value="Add Employee"
                                                     class="btn btn-success"><i class="fa-solid fa-user-plus"
                                                         style="color: #ffffff;"></i> Add</button>
                                             </div>
@@ -380,7 +381,8 @@
             </div>
         </div>
     </div>
-    <script src="validation.js"></script>
+    <script src="mainjsfile.js"></script>
+    <script src="employee.js"></script>
 </body>
 
 </html>
