--- a/previleges.html
+++ b/previleges.html
@@ -320,13 +320,13 @@
                                         <!--create user and clear button-->
                                         <div class="row mt-5">
                                             <div class="col-6 text-start">
-                                                <button type="reset" id="submit" value="Clear"
+                                                <button type="reset" id="buttonClear" value="Clear"
                                                     class="btn btn-secondary"><i class="fa-solid fa-eraser"
                                                         style="color: #ffffff;"></i> Clear</button>
                                             </div>
 
                                             <div class="col-6 text-start">
-                                                <button type="submit" id="submit" value="save"
+                                                <button type="submit" id="buttonSubmit" value="save"
                                                     class="btn btn-success"><i class="fa-solid fa-user-plus"
                                                         style="color: #ffffff;"></i> Save</button>
                                             </div>
@@ -340,7 +340,7 @@
             </div>
         </div>
     </div>
-    <script src="validation.js"></script>
+    <script src="mainjsfile.js"></script>
 </body>
 
 </html>
