--- a/product inventory.html
+++ b/product inventory.html
@@ -364,7 +364,7 @@
             </div>
         </div>
     </div>
-    <script src="validation.js"></script>
+    <script src="mainjsfile.js"></script>
 </body>
 
 </html>
