--- a/product management.html
+++ b/product management.html
@@ -478,7 +478,7 @@
                                                         *</span></span>
                                                 <input type="text" class="form-control"
                                                     placeholder="Type Profit Rate..." required>
-                                                <div class="invalid-feedback"> Please enter profit rate.</div>
+                                                <div class="invalid-feedback"> Please type profit rate.</div>
                                             </div>
                                         </div>
 
@@ -561,7 +561,7 @@
             </div>
         </div>
     </div>
-    <script src="validation.js"></script>
+    <script src="mainjsfile.js"></script>
 </body>
 
 </html>
