--- a/customers.html
+++ b/customers.html
@@ -244,8 +244,7 @@
                                         </div>
                                     </div>
 
-                                    <form action="">
-
+                                    <form action="" class="needs-validation" novalidate method="post">
 
 
                                         <!--customer id filed-->
@@ -254,8 +253,8 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="designCode">Customer ID</span>
-                                                <input type="text" class="form-control" disabled>
+                                                    id="labelCusId">Customer ID</span>
+                                                <input type="text" class="form-control" readonly id="textCusId">
                                             </div>
                                         </div>
 
@@ -266,27 +265,29 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="image">Reg No<span class="text-danger">
+                                                    id="LableCusRegNo">Reg No<span class="text-danger">
                                                         *</span></span>
-                                                <input type="text" class="form-control" disabled>
+                                                <input type="text" class="form-control" id="textCusRegNo" readonly>
                                             </div>
                                         </div>
 
 
-                                        <!--first name field-->
+                                        <!--first name -->
                                         <div class="row mt-3">
                                             <div class="input-group">
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="firstname">First Name<span class="text-danger">
+                                                    id="labelFirstName">First Name<span class="text-danger">
                                                         *</span></span>
-                                                <input type="text" class="form-control"
-                                                    placeholder="Type First Name..." required>
+                                                <input type="text" class="form-control" placeholder="Type First Name..."
+                                                    id="textFirstName" required>
+                                                <div class="invalid-feedback"> Please type first name.</div>
                                             </div>
                                         </div>
 
-                                        <!--Last name field-->
+
+                                        <!--Last name -->
                                         <div class="row mt-3">
                                             <div class="input-group">
                                                 <span class="input-group-text col-3 fw-bold"
@@ -294,22 +295,24 @@
                                                     style="background-color:#343a40; color: #ffffff;" id="lastname">Last
                                                     Name<span class="text-danger">
                                                         *</span></span>
-                                                <input type="text" class="form-control"
+                                                <input type="text" class="form-control" id="textLastName"
                                                     placeholder="Type Last Name..." required>
+                                                <div class="invalid-feedback"> Please type last name.</div>
                                             </div>
                                         </div>
 
 
-                                        <!--contact no field-->
+                                        <!--contact no -->
                                         <div class="row mt-3">
                                             <div class="input-group">
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="lastname">Contact No<span class="text-danger">
+                                                    id="labelContactNo">Contact No<span class="text-danger">
                                                         *</span></span>
-                                                <input type="text" class="form-control"
+                                                <input type="text" class="form-control" id="textCotactNo"
                                                     placeholder="Type Contact No..." required>
+                                                <div class="invalid-feedback"> Please type contact number.</div>
                                             </div>
                                         </div>
 
@@ -320,10 +323,11 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="lastname">Email<span class="text-danger">
+                                                    id="labelEmail">Email<span class="text-danger">
                                                         *</span></span>
                                                 <input type="email" class="form-control"
-                                                    placeholder="Type Email Address..." required>
+                                                    placeholder="Type Email Address..." required id="textEmail">
+                                                <div class="invalid-feedback"> Please type email address.</div>
                                             </div>
                                         </div>
 
@@ -334,10 +338,11 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="lastname">Address<span class="text-danger">
+                                                    id="labelAddress">Address<span class="text-danger">
                                                         *</span></span>
-                                                <input type="text" class="form-control"
-                                                    placeholder="Type Address..." required>
+                                                <input type="text" class="form-control" placeholder="Type Address..."
+                                                    required id="textAddress">
+                                                <div class="invalid-feedback"> Please type Address.</div>
                                             </div>
                                         </div>
 
@@ -348,10 +353,11 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="lastname">City<span class="text-danger">
+                                                    id="labelCity">City<span class="text-danger">
                                                         *</span></span>
-                                                <input type="text" class="form-control"
+                                                <input type="text" class="form-control" id="textCity"
                                                     placeholder="Type City..." required>
+                                                <div class="invalid-feedback"> Please type city.</div>
                                             </div>
                                         </div>
 
@@ -362,10 +368,11 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="lastname">District<span class="text-danger">
+                                                    id="labelDistrict">District<span class="text-danger">
                                                         *</span></span>
-                                                <input type="text" class="form-control"
+                                                <input type="text" class="form-control" id="textDistrict"
                                                     placeholder="Type District..." required>
+                                                <div class="invalid-feedback"> Please type district.</div>
                                             </div>
                                         </div>
 
@@ -376,20 +383,20 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="status">Status<span class="text-danger">
+                                                    id="labelStatus">Status<span class="text-danger">
                                                         *</span></span>
 
                                                 <div class="form-check">
-                                                    <input class="form-check-input m-2" type="radio"
-                                                        name="flexRadioDefault" id="flexRadioDefault2" checked>
-                                                    <label class="form-check-label" for="flexRadioDefault2">
+                                                    <input class="form-check-input m-2" type="radio" name="radioStatus"
+                                                        id="radioDefault" checked>
+                                                    <label class="form-check-label" for="radioDefault">
                                                         Default
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input m-2" type="radio"
-                                                        name="flexRadioDefault" id="flexRadioDefault2">
-                                                    <label class="form-check-label" for="flexRadioDefault2">
+                                                    <input class="form-check-input m-2" type="radio" name="radioStatus"
+                                                        id="radioLoyalty">
+                                                    <label class="form-check-label" for="radioLoyalty">
                                                         Loyalty
                                                     </label>
                                                 </div>
@@ -404,33 +411,27 @@
                                                     style="background-color:#343a40; color: #ffffff;"
                                                     id="imageOrientation">Notes<span class="text-danger">
                                                         *</span></span>
-
-                                                <div class="form-floating">
-                                                    <textarea class="form-control" placeholder="Leave a comment here"
-                                                        id="floatingTextarea"></textarea>
-                                                    <label for="floatingTextarea"></label>
-                                                </div>
+                                                <textarea class="form-control" id="textareaNotes"></textarea>
                                             </div>
                                         </div>
-
-
-                                        <!--create user and clear button-->
-                                        <div class="row mt-5">
-                                            <div class="col-6 text-start">
-                                                <button type="reset" id="submit" value="Clear"
-                                                    class="btn btn-secondary"><i class="fa-solid fa-eraser"
-                                                        style="color: #ffffff;"></i> Clear</button>
-                                            </div>
-
-                                            <div class="col-6 text-start">
-                                                <button type="submit" id="submit" value="Add Employee"
-                                                    class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                                        style="color: #ffffff;"></i> Add</button>
-
-                                            </div>
-                                        </div>
-                                    </form>
                                 </div>
+
+
+                                <!--create user and clear button-->
+                                <div class="row mt-5">
+                                    <div class="col-6 text-start">
+                                        <button type="reset" id="buttonClear" value="Clear" class="btn btn-secondary"><i
+                                                class="fa-solid fa-eraser" style="color: #ffffff;"></i> Clear</button>
+                                    </div>
+
+                                    <div class="col-6 text-start">
+                                        <button type="submit" id="buttonSubmit" value="Add Employee"
+                                            class="btn btn-success"><i class="fa-solid fa-user-plus"
+                                                style="color: #ffffff;"></i> Add</button>
+
+                                    </div>
+                                </div>
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -438,6 +439,8 @@
             </div>
         </div>
     </div>
+    </div>
+    <script src="mainjsfile.js"></script>
 </body>
 
 </html>
