--- a/delivery.html
+++ b/delivery.html
@@ -233,7 +233,8 @@
                                     </div>
                                 </div>
 
-                                <form action="">
+                                <form action="" class="needs-validation" novalidate method="post">
+
 
                                     <!--delivery id filed-->
                                     <div class="row mt-3">
@@ -241,8 +242,9 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="designCode">Delivery ID</span>
-                                            <input type="text" class="form-control" disabled>
+                                                id="labelDeliveryId">Delivery ID</span>
+                                            <input type="text" class="form-control" id="textDeliveryID" readonly
+                                                required>
                                         </div>
                                     </div>
 
@@ -253,8 +255,9 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="designCode">Invoice No</span>
-                                            <input type="text" class="form-control" disabled>
+                                                id="labelInvoiceNo">Invoice No</span>
+                                            <input type="text" class="form-control" readonly id="textInvoiceNo"
+                                                required>
                                         </div>
                                     </div>
 
@@ -265,8 +268,9 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="designCode">Delivery Date</span>
-                                            <input type="date" class="form-control">
+                                                id="labelDeliveryDate">Delivery Date</span>
+                                            <input type="date" class="form-control" id="textDeliveryDate" required>
+                                            <div class="invalid-feedback"> Please select delivery date.</div>
                                         </div>
                                     </div>
 
@@ -276,12 +280,13 @@
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="imageName">Courier
+                                                style="background-color:#343a40; color: #ffffff;"
+                                                id="labelCourierService">Courier
                                                 Service<span class="text-danger">
                                                     *</span></span>
-                                            <select class="form-select" aria-label="Default select example" required>
-                                                <option value="1">Ceylon Express</option>
-                                                <option value="2">Royal Express</option>
+                                            <select class="form-select" id="selectCourierService" required>
+
+                                                <div class="invalid-feedback"> Please select Courier Service.</div>
                                             </select>
                                         </div>
                                     </div>
@@ -293,10 +298,13 @@
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="image">Waybill
+                                                style="background-color:#343a40; color: #ffffff;"
+                                                id="labelWaybillNo">Waybill
                                                 No<span class="text-danger">
                                                     *</span></span>
-                                            <input type="text" class="form-control" placeholder="" required>
+                                            <input type="text" class="form-control" id="textWaybillNo"
+                                                placeholder="Type Waybill No..." required>
+                                            <div class="invalid-feedback"> Please type waybill number.</div>
                                         </div>
                                     </div>
 
@@ -306,43 +314,44 @@
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="image">Delivery Address<span class="text-danger">
+                                                style="background-color:#343a40; color: #ffffff;"
+                                                id="labelDeliveryAddress">Delivery Address<span class="text-danger">
                                                     *</span></span>
-                                            <input type="text" class="form-control" placeholder="" required>
+                                            <input type="text" class="form-control"
+                                                placeholder="Type Delivery Address..." required>
+                                            <div class="invalid-feedback"> Please type delivery address.</div>
                                         </div>
                                     </div>
 
 
-                                     <!-- stauts radiobutton-->
-                                     <div class="row mt-3">
+                                    <!-- stauts radiobutton-->
+                                    <div class="row mt-3">
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="status">Status<span class="text-danger">
+                                                id="labelStatus">Status<span class="text-danger">
                                                     *</span></span>
-                                                    <select class="form-select" aria-label="Default select example" required>
-                                                        <option value="1">Pickup Collected</option>
-                                                        <option value="2">Branch In</option>
-                                                        <option value="3">Delivered</option>
-                                                    </select>  
+                                            <select class="form-select" id="selectStatus" required>
+                                                <div class="invalid-feedback"> Please select status.</div>
+
+                                            </select>
                                         </div>
                                     </div>
 
 
-                                     <!-- payment method radiobutton-->
-                                     <div class="row mt-3">
+                                    <!-- payment method radiobutton-->
+                                    <div class="row mt-3">
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="status">Payment Method<span class="text-danger">
+                                                id="labelPaymentMethod">Payment
+                                                Method<span class="text-danger">
                                                     *</span></span>
-                                                    <select class="form-select" aria-label="Default select example" required>
-                                                        <option value="1">COD</option>
-                                                        <option value="2">None COD</option>
-                                                        <option value="3">Delivery Charge Only</option>
-                                                    </select>  
+                                            <select class="form-select" id="selectPaymentMethod" required>
+                                                <div class="invalid-feedback"> Please select payment method.</div>
+                                            </select>
                                         </div>
                                     </div>
 
@@ -355,33 +364,29 @@
                                                 style="background-color:#343a40; color: #ffffff;"
                                                 id="imageOrientation">Notes<span class="text-danger">
                                                     *</span></span>
-
-                                            <div class="form-floating">
-                                                <textarea class="form-control" placeholder="Leave a comment here"
-                                                    id="floatingTextarea"></textarea>
-                                                <label for="floatingTextarea"></label>
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-                                    <!--create user and clear button-->
-                                    <div class="row mt-5">
-                                        <div class="col-6 text-start">
-                                            <button type="reset" id="submit" value="Clear" class="btn btn-secondary"><i
-                                                    class="fa-solid fa-eraser" style="color: #ffffff;"></i>
-                                                Clear</button>
-                                        </div>
-
-                                        <div class="col-6 text-start">
-                                            <button type="submit" id="submit" value="Add Employee"
-                                                class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                                    style="color: #ffffff;"></i> Add</button>
+                                            <textarea class="form-control" id="textareaNotes"></textarea>
 
                                         </div>
                                     </div>
-                                </form>
                             </div>
+
+
+                            <!--create user and clear button-->
+                            <div class="row mt-5">
+                                <div class="col-6 text-start">
+                                    <button type="reset" id="buttonClear" value="Clear" class="btn btn-secondary"><i
+                                            class="fa-solid fa-eraser" style="color: #ffffff;"></i>
+                                        Clear</button>
+                                </div>
+
+                                <div class="col-6 text-start">
+                                    <button type="submit" id="buttonSubmit" value="Add Employee"
+                                        class="btn btn-success"><i class="fa-solid fa-user-plus"
+                                            style="color: #ffffff;"></i> Add</button>
+
+                                </div>
+                            </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -389,6 +394,9 @@
         </div>
     </div>
     </div>
+    </div>
+    <script src="mainjsfile.js"></script>
+    <script src="delivery.js"></script>
 </body>
 
 </html>
