--- a/design.html
+++ b/design.html
@@ -374,7 +374,7 @@
             </div>
         </div>
     </div>
-    <script src="validation.js"></script>
+    <script src="mainjsfile.js"></script>
 </body>
 
 </html>
