--- a/grn.html
+++ b/grn.html
@@ -189,7 +189,7 @@
                             <tr>
                                 <td></td>
                                 <td></td>
-                             <td></td>
+                                <td></td>
 
 
                                 <td><button type="button" class="btn btn-primary  btn-sm rounded-5"
@@ -228,7 +228,7 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                               
+
                                 <td>
                                     <button class="options-btn"><i class="fa-solid fa-eye"
                                             style="color: #071731;"></i></button>
@@ -271,16 +271,16 @@
                                     </div>
                                 </div>
 
-                                <form action="">
+                                <form action="" class="needs-validation" novalidate method="post">
 
                                     <!--GRN no filed-->
                                     <div class="row mt-3">
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="designCode">GRN
+                                                style="background-color:#343a40; color: #ffffff;" id="labelGrnNo">GRN
                                                 No</span>
-                                            <input type="text" class="form-control" disabled>
+                                            <input type="text" class="form-control" id="textGrnNo" readonly required>
                                         </div>
                                     </div>
 
@@ -289,42 +289,71 @@
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="image">Supplier
+                                                style="background-color:#343a40; color: #ffffff;"
+                                                id="labelSupplierId">Supplier
                                                 ID<span class="text-danger">
                                                     *</span></span>
-                                            <input type="text" class="form-control" disabled>
+                                            <input type="text" class="form-control" id="textSupplierId" readonly
+                                                required>
                                         </div>
                                     </div>
 
-                                    <!--purchase order filed-->
+                                    <!--purchase order id filed-->
                                     <div class="row mt-3">
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="image">Purchase
+                                                style="background-color:#343a40; color: #ffffff;"
+                                                id="labelPurchaseOrderId">Purchase
                                                 order<span class="text-danger">
                                                     *</span></span>
-                                            <input type="text" class="form-control" disabled>
+                                            <input type="text" class="form-control" id="textPurchaseOrderId" readonly
+                                                required>
                                         </div>
                                     </div>
 
 
                                     <!--GRN Material list transfer datalist component-->
 
-
-
-
-
+                                    <div class="row mt-3">
+                                        <div class="input-group">
+                                            <span class="input-group-text col-4 fw-bold"
+                                                onClick=this.parentNode.children[1].focus();
+                                                style="background-color:#343a40; color: #ffffff;"
+                                                id="labelMaterialList"> Material List<span class="text-danger">
+                                                    *</span></span>
+                                        </div>
+                                        <div class="container transfer-list mt-2">
+                                            <div class="side left-side" id="leftSide">
+                                                <!-- Items will be added dynamically here -->
+                                            </div>
+                                            <div class="mid-side">
+                                                <button class="all-to-right">>></button>
+                                                <button class="checked-to-right">></button>
+                                                <button class="checked-to-left">
+                                                    << </button>
+                                                        <button class="all-to-left">
+                                                            << </button>
+                                            </div>
+                                            <div class="side right-side" id="rightSide">
+                                                <!-- Items will be added dynamically here -->
+                                            </div>
+                                            <div class="invalid-feedback"> Please select at least one material.</div>
+                                        </div>
+                                    </div>
 
                                     <!-- Total bill -->
                                     <div class="row mt-3">
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="category">Total
+                                                style="background-color:#343a40; color: #ffffff;"
+                                                id="labelTotalBill">Total
                                                 Bill<span class="text-danger">
                                                     *</span></span>
-                                            <input type="text" class="form-control" placeholder="" required>
+                                            <input type="text" class="form-control"
+                                                placeholder="Type Total Bill Amount..." id="textTotalBill" required>
+                                            <div class="invalid-feedback"> Please type total bill amount.</div>
                                         </div>
                                     </div>
 
@@ -334,23 +363,28 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="category">Discount<span class="text-danger">
+                                                id="labelDiscount">Discount<span class="text-danger">
                                                     *</span></span>
-                                            <input type="text" class="form-control" placeholder="" required>
+                                            <input type="text" class="form-control" placeholder="" id="textDiscount"
+                                                required>
+                                            <div class="invalid-feedback"> Please type discount amount.</div>
                                         </div>
                                     </div>
+
 
                                     <!-- net bill -->
                                     <div class="row mt-3">
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="category">Net
+                                                style="background-color:#343a40; color: #ffffff;" id="labelNetBill">Net
                                                 Bill<span class="text-danger">
                                                     *</span></span>
-                                            <input type="text" class="form-control" placeholder="" required>
+                                            <input type="text" class="form-control" placeholder="" id="textNetBill"
+                                                required readonly>
                                         </div>
                                     </div>
+
 
                                     <!--received_date filed-->
                                     <div class="row mt-3">
@@ -358,9 +392,10 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="confirmation">Received Date<span class="text-danger">
+                                                id="labelReceivedDate">Received Date<span class="text-danger">
                                                     *</span></span>
-                                            <input type="date" class="form-control">
+                                            <input type="date" class="form-control" id="textReceivedDate">
+                                            <div class="invalid-feedback"> Please select received date.</div>
                                         </div>
                                     </div>
 
@@ -371,20 +406,20 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="status">Status<span class="text-danger">
+                                                id="labelStatus">Status<span class="text-danger">
                                                     *</span></span>
 
                                             <div class="form-check">
-                                                <input class="form-check-input m-2" type="radio" name="flexRadioDefault"
-                                                    id="flexRadioDefault2" checked>
-                                                <label class="form-check-label" for="flexRadioDefault2">
+                                                <input class="form-check-input m-2" type="radio" name="radioStatus"
+                                                    id="radioPending" checked>
+                                                <label class="form-check-label" for="radioPending">
                                                     Pending
                                                 </label>
                                             </div>
                                             <div class="form-check">
-                                                <input class="form-check-input m-2" type="radio" name="flexRadioDefault"
-                                                    id="flexRadioDefault2">
-                                                <label class="form-check-label" for="flexRadioDefault2">
+                                                <input class="form-check-input m-2" type="radio" name="radioStatus"
+                                                    id="radioCompleted">
+                                                <label class="form-check-label" for="radioCompleted">
                                                     Completed
                                                 </label>
                                             </div>
@@ -399,33 +434,28 @@
                                                 style="background-color:#343a40; color: #ffffff;"
                                                 id="imageOrientation">Notes<span class="text-danger">
                                                     *</span></span>
-
-                                            <div class="form-floating">
-                                                <textarea class="form-control" placeholder="Leave a comment here"
-                                                    id="floatingTextarea"></textarea>
-                                                <label for="floatingTextarea"></label>
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-                                    <!--create user and clear button-->
-                                    <div class="row mt-5">
-                                        <div class="col-6 text-start">
-                                            <button type="reset" id="submit" value="Clear" class="btn btn-secondary"><i
-                                                    class="fa-solid fa-eraser" style="color: #ffffff;"></i>
-                                                Clear</button>
-                                        </div>
-
-                                        <div class="col-6 text-start">
-                                            <button type="submit" id="submit" value="Add Employee"
-                                                class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                                    style="color: #ffffff;"></i> Add</button>
+                                            <textarea class="form-control" id="textareaNotes"></textarea>
 
                                         </div>
                                     </div>
-                                </form>
+                            
+
+                            <!--create user and clear button-->
+                            <div class="row mt-5">
+                                <div class="col-6 text-start">
+                                    <button type="reset" id="buttonClear" value="Clear" class="btn btn-secondary"><i
+                                            class="fa-solid fa-eraser" style="color: #ffffff;"></i>
+                                        Clear</button>
+                                </div>
+
+                                <div class="col-6 text-start">
+                                    <button type="submit" id="buttonSubmit" value="Add Employee"
+                                        class="btn btn-success"><i class="fa-solid fa-user-plus"
+                                            style="color: #ffffff;"></i> Add</button>
+
+                                </div>
                             </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -433,6 +463,8 @@
         </div>
     </div>
     </div>
+    </div>
+    <script src="mainjsfile.js"></script>
 </body>
 
 </html>
