--- a/login.html
+++ b/login.html
@@ -87,16 +87,18 @@
                                                     </div>
                                                 </div>
 
-                                                <form action="">
+                                                <form action="" class="needs-validation" novalidate method="post">
+
                                                     <div class="row mt-3">
                                                         <div class="input-group">
                                                             <span class="input-group-text col-3 fw-bold"
                                                                 onClick=this.parentNode.children[1].focus();
                                                                 style="background-color:#343a40; color: #ffffff;"
-                                                                id="username">Username<span class="text-danger">
+                                                                id="labelUsername">Username<span class="text-danger">
                                                                     *</span></span>
                                                             <input type="text" class="form-control"
-                                                                placeholder="Type Username...">
+                                                                placeholder="Type Username..." id="textUSername" required>
+                                                                <div class="invalid-feedback"> Please type username.</div>
                                                         </div>
                                                     </div>
 
@@ -105,10 +107,11 @@
                                                             <span class="input-group-text col-3 fw-bold"
                                                                 onClick=this.parentNode.children[1].focus();
                                                                 style="background-color:#343a40; color: #ffffff;"
-                                                                id="password">Password<span class="text-danger">
+                                                                id="labelPassword">Password<span class="text-danger">
                                                                     *</span></span>
                                                             <input type="password" class="form-control"
-                                                                placeholder="Type Password...">
+                                                                placeholder="Type Password..." id="textPassword" required>
+                                                                <div class="invalid-feedback"> Please type password.</div>
                                                         </div>
                                                     </div>
 
@@ -121,13 +124,13 @@
                                                     <!--create user and clear button-->
                                                     <div class="row mt-5">
                                                         <div class="col-6 text-start">
-                                                            <button type="reset" id="submit" value="Clear"
+                                                            <button type="reset" id="buttonClear" value="Clear"
                                                                 class="btn btn-secondary"><i class="fa-solid fa-eraser"
                                                                     style="color: #ffffff;"></i> Clear</button>
                                                         </div>
 
                                                         <div class="col-6 text-start">
-                                                            <button type="submit" id="submit" value="Add Employee"
+                                                            <button type="submit" id="buttonSubmit" value="Add Employee"
                                                                 class="btn btn-success"><i
                                                                     class="fa-solid fa-right-to-bracket"
                                                                     style="color: #ffffff;"></i> Sign In</button>
@@ -146,7 +149,6 @@
                 </div>
             </div>
         </div>
-
 
         <script>
             document.addEventListener('DOMContentLoaded', function () {
