--- a/material management.html
+++ b/material management.html
@@ -427,7 +427,7 @@
         </div>
     </div>
     </div>
-    <script src="validation.js"></script>
+    <script src="mainjsfile.js"></script>
 </body>
 
 </html>
