--- a/purchase request.html
+++ b/purchase request.html
@@ -271,30 +271,31 @@
                                     </div>
                                 </div>
 
-                                <form action="">
+                                <form action="" class="needs-validation" novalidate method="post">
 
-                                                                   <!--purchase request ID filed-->
+
+                                    <!--purchase request ID filed-->
                                     <div class="row mt-3">
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="designCode">Request ID</span>
-                                            <input type="text" class="form-control" disabled>
+                                                id="labelRequestID">Request ID</span>
+                                            <input type="text" class="form-control" id="textRequestID" readonly>
                                         </div>
                                     </div>
 
 
-                                    <!--product name field-->
+                                    <!--order no field-->
                                     <div class="row mt-3">
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="imageName">Order
+                                                style="background-color:#343a40; color: #ffffff;"
+                                                id="labelOrderNo">Order
                                                 No<span class="text-danger">
                                                     *</span></span>
-                                            <input type="text" class="form-control" placeholder="Type Design Name..."
-                                                disabled>
+                                            <input type="text" class="form-control" id="textOrderNo" readonly>
                                         </div>
                                     </div>
 
@@ -304,16 +305,44 @@
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="image">Supplier
+                                                style="background-color:#343a40; color: #ffffff;"
+                                                id="labelSupplierId">Supplier
                                                 ID<span class="text-danger">
                                                     *</span></span>
-                                            <input type="text" class="form-control" disabled>
+                                            <input type="text" class="form-control" id="textSupplierId" readonly>
                                         </div>
                                     </div>
 
 
+
                                     <!--Material list transfer datalist component-->
 
+                                    <div class="row mt-3">
+                                        <div class="input-group">
+                                            <span class="input-group-text col-4 fw-bold"
+                                                onClick=this.parentNode.children[1].focus();
+                                                style="background-color:#343a40; color: #ffffff;" id="labelFrameType">
+                                                Material List<span class="text-danger">
+                                                    *</span></span>
+                                        </div>
+                                        <div class="container transfer-list mt-2">
+                                            <div class="side left-side" id="leftSide">
+                                                <!-- Items will be added dynamically here -->
+                                            </div>
+                                            <div class="mid-side">
+                                                <button class="all-to-right">>></button>
+                                                <button class="checked-to-right">></button>
+                                                <button class="checked-to-left">
+                                                    << </button>
+                                                        <button class="all-to-left">
+                                                            << </button>
+                                            </div>
+                                            <div class="side right-side" id="rightSide">
+                                                <!-- Items will be added dynamically here -->
+                                            </div>
+                                        </div>
+                                        <div class="invalid-feedback"> Please selectat least one material.</div>
+                                    </div>
 
 
                                     <!-- Total bill -->
@@ -321,12 +350,13 @@
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="category">Frame
-                                                size ID<span class="text-danger">
+                                                style="background-color:#343a40; color: #ffffff;"
+                                                id="labelTotalBill">Total Bill<span class="text-danger">
                                                     *</span></span>
-                                            <input type="text" class="form-control" placeholder="" required>
+                                            <input type="text" class="form-control" id="textTotalBill" required>
                                         </div>
                                     </div>
+
 
                                     <!-- stauts radiobutton-->
                                     <div class="row mt-3">
@@ -334,25 +364,26 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="status">Status<span class="text-danger">
+                                                id="labelStatus">Status<span class="text-danger">
                                                     *</span></span>
 
                                             <div class="form-check">
-                                                <input class="form-check-input m-2" type="radio" name="flexRadioDefault"
-                                                    id="flexRadioDefault2" checked>
-                                                <label class="form-check-label" for="flexRadioDefault2">
+                                                <input class="form-check-input m-2" type="radio" name="radioStatus"
+                                                    id="radioPending" checked>
+                                                <label class="form-check-label" for="radioPending">
                                                     Pending
                                                 </label>
                                             </div>
                                             <div class="form-check">
-                                                <input class="form-check-input m-2" type="radio" name="flexRadioDefault"
-                                                    id="flexRadioDefault2">
-                                                <label class="form-check-label" for="flexRadioDefault2">
+                                                <input class="form-check-input m-2" type="radio" name="radioStatus"
+                                                    id="radioCompleted">
+                                                <label class="form-check-label" for="radioCompleted">
                                                     Completed
                                                 </label>
                                             </div>
                                         </div>
                                     </div>
+
 
                                     <!--required_date filed-->
                                     <div class="row mt-3">
@@ -360,9 +391,10 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="confirmation">Required Date<span class="text-danger">
+                                                id="labelRequiredDate">Required Date<span class="text-danger">
                                                     *</span></span>
-                                            <input type="date" class="form-control">
+                                            <input type="date" class="form-control" id="textRequiredDate">
+                                            <div class="invalid-feedback"> Please select required date.</div>
                                         </div>
                                     </div>
 
@@ -375,33 +407,26 @@
                                                 style="background-color:#343a40; color: #ffffff;"
                                                 id="imageOrientation">Notes<span class="text-danger">
                                                     *</span></span>
-
-                                            <div class="form-floating">
-                                                <textarea class="form-control" placeholder="Leave a comment here"
-                                                    id="floatingTextarea"></textarea>
-                                                <label for="floatingTextarea"></label>
-                                            </div>
+                                            <textarea class="form-control" id="textareaNotes"></textarea>
                                         </div>
                                     </div>
+                            
 
+                            <!--create user and clear button-->
+                            <div class="row mt-5">
+                                <div class="col-6 text-start">
+                                    <button type="reset" id="submit" value="buttonClear" class="btn btn-secondary"><i
+                                            class="fa-solid fa-eraser" style="color: #ffffff;"></i>
+                                        Clear</button>
+                                </div>
 
-                                    <!--create user and clear button-->
-                                    <div class="row mt-5">
-                                        <div class="col-6 text-start">
-                                            <button type="reset" id="submit" value="Clear" class="btn btn-secondary"><i
-                                                    class="fa-solid fa-eraser" style="color: #ffffff;"></i>
-                                                Clear</button>
-                                        </div>
+                                <div class="col-6 text-start">
+                                    <button type="submit" id="buttonSubmit" value="Add Employee" class="btn btn-success"><i
+                                            class="fa-solid fa-user-plus" style="color: #ffffff;"></i> Add</button>
 
-                                        <div class="col-6 text-start">
-                                            <button type="submit" id="submit" value="Add Employee"
-                                                class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                                    style="color: #ffffff;"></i> Add</button>
-
-                                        </div>
-                                    </div>
-                                </form>
+                                </div>
                             </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -409,6 +434,8 @@
         </div>
     </div>
     </div>
+    </div>
+    <script src="mainjsfile.js"></script>
 </body>
 
 </html>
