--- a/users.html
+++ b/users.html
@@ -370,7 +370,7 @@
             </div>
         </div>
     </div>
-    <script src="validation.js"></script>
+    <script src="mainjsfile.js"></script>
 </body>
 
 </html>
