--- a/customer payments.html
+++ b/customer payments.html
@@ -23,11 +23,8 @@
     <link rel="stylesheet" href="../../Resources/fontawesome/fontawesome-free-6.6.0/css/all.min.css">
 
     <style>
-        .scrollable-card {
-            height: 500px;
-            /* Set the desired height */
-            overflow-y: auto;
-            /* Enable vertical scrolling */
+        .card-img {
+            height: 600px;
         }
     </style>
 </head>
@@ -164,8 +161,7 @@
                     <table id="tableUsers" class="table table-striped table-hover ">
                         <thead class="table-dark text-start">
                             <tr>
-                                <th>Payemnt ID</th>
-                                <th>Invoice No</th>
+                                                               <th>Invoice No</th>
                                 <th>Customer ID</th>
                                 <th>Payment Source</th>
                                 <th>Payment Method</th>
@@ -177,8 +173,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td></td>
-                                <td></td>
+                                                               <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -233,31 +228,6 @@
 
                                 <form action="" class="needs-validation" novalidate method="post">
 
-                                    <!--payment id -->
-                                    <div class="row mt-3">
-                                        <div class="input-group">
-                                            <span class="input-group-text col-4 fw-bold"
-                                                onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;"
-                                                id="labelPaymentId">Payment ID</span>
-                                            <input type="text" class="form-control" id="textPaymentId" readonly
-                                                required>
-                                        </div>
-                                    </div>
-
-
-                                    <!--invoice no -->
-                                    <div class="row mt-3">
-                                        <div class="input-group">
-                                            <span class="input-group-text col-4 fw-bold"
-                                                onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;"
-                                                id="labelInvoiceNo">Invoice No</span>
-                                            <input type="text" class="form-control" id="textInvoiceNo" readonly
-                                                required>
-                                        </div>
-                                    </div>
-
 
                                     <!--customer id -->
                                     <div class="row mt-3">
@@ -306,6 +276,7 @@
                                     </div>
 
 
+
                                     <!--Total amount-->
                                     <div class="row mt-3">
                                         <div class="input-group">
@@ -319,6 +290,7 @@
                                                 required>
                                         </div>
                                     </div>
+
 
 
                                     <!--paid amount-->
@@ -358,7 +330,7 @@
                                                 style="background-color:#343a40; color: #ffffff;"
                                                 id="labelNotes">Notes<span class="text-danger">
                                                     *</span></span>
-                                            <textarea class="form-control" id="floatingTextarea"></textarea>
+                                            <textarea class="form-control" id="textareaNotes"></textarea>
                                         </div>
                                     </div>
                             
