--- a/delivery.html
+++ b/delivery.html
@@ -21,13 +21,9 @@
 
     <!--link font awesome css file-->
     <link rel="stylesheet" href="../../Resources/fontawesome/fontawesome-free-6.6.0/css/all.min.css">
-
     <style>
-        .scrollable-card {
-            height: 500px;
-            /* Set the desired height */
-            overflow-y: auto;
-            /* Enable vertical scrolling */
+        .card-img {
+            height: 600px;
         }
     </style>
 </head>
@@ -164,7 +160,6 @@
                     <table id="tableUsers" class="table table-striped table-hover ">
                         <thead class="table-dark text-start">
                             <tr>
-                                <th>Delivery ID</th>
                                 <th>Invoice No</th>
                                 <th>Delivery Date</th>
                                 <th>Courier Service</th>
@@ -178,7 +173,6 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -236,32 +230,6 @@
                                 <form action="" class="needs-validation" novalidate method="post">
 
 
-                                    <!--delivery id filed-->
-                                    <div class="row mt-3">
-                                        <div class="input-group">
-                                            <span class="input-group-text col-4 fw-bold"
-                                                onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;"
-                                                id="labelDeliveryId">Delivery ID</span>
-                                            <input type="text" class="form-control" id="textDeliveryID" readonly
-                                                required>
-                                        </div>
-                                    </div>
-
-
-                                    <!--invoice no filed-->
-                                    <div class="row mt-3">
-                                        <div class="input-group">
-                                            <span class="input-group-text col-4 fw-bold"
-                                                onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;"
-                                                id="labelInvoiceNo">Invoice No</span>
-                                            <input type="text" class="form-control" readonly id="textInvoiceNo"
-                                                required>
-                                        </div>
-                                    </div>
-
-
                                     <!--delivery date-->
                                     <div class="row mt-3">
                                         <div class="input-group">
@@ -269,7 +237,7 @@
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
                                                 id="labelDeliveryDate">Delivery Date</span>
-                                            <input type="date" class="form-control" id="textDeliveryDate" required>
+                                            <input type="date" class="form-control" id="textDeliveryDate" required onkeyup="return false">
                                             <div class="invalid-feedback"> Please select delivery date.</div>
                                         </div>
                                     </div>
@@ -368,7 +336,7 @@
 
                                         </div>
                                     </div>
-                            </div>
+                          
 
 
                             <!--create user and clear button-->
