--- a/product inventory.html
+++ b/product inventory.html
@@ -159,13 +159,10 @@
         <div class="col-2"></div>
         <div class="col-8">
 
-            <!--ADD BUTTON-->
+            <!--print BUTTON-->
             <div class="row text-end">
                 <div class="col-8"></div>
                 <div class="col-4">
-                    <button class="btn" style="color: #005eff;" type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i
-                            class="fa-regular fa-square-plus" style="color: #005eff;"></i> <b>New</b></button>
                     <button type="button" class="btn"><i class="fa-solid fa-print" style="color: #000000;"></i><b>
                             Print</b></button>
                 </div>
@@ -176,33 +173,15 @@
                     <table id="tableUsers" class="table table-striped table-hover ">
                         <thead class="table-dark text-start">
                             <tr>
-                                <th>Inventory ID</th>
                                 <th>Product ID</th>
                                 <th>Available Quantity</th>
                                 <th>Total Quantity</th>
                                 <th>Status</th>
-                                <th>Notes</th>
                                 <th>Options</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
-                                <td>
-                                    <button class="options-btn"><i class="fa-solid fa-eye"
-                                            style="color: #071731;"></i></button>
-                                    <button class="options-btn"><i class="fa-solid fa-pen-to-square"
-                                            style="color: #089131;"></i></button>
-                                    <button class="options-btn"><i class="fa-solid fa-trash-can"
-                                            style="color: #fd0d0d;"></i></button>
-                                </td>
-                            </tr>
                         </tbody>
                     </table>
 
@@ -211,158 +190,6 @@
             <div class="col-2"></div>
         </div>
 
-
-        <!--FORM SECTION-->
-
-        <div class="offcanvas offcanvas-end w-50" tabindex="-1" id="offcanvasRight"
-            aria-labelledby="offcanvasRightLabel">
-            <div class="offcanvas-header">
-                <button type="button" class="btn btn-outline-light btn-close text-reset" data-bs-dismiss="offcanvas"
-                    aria-label="Close"></button>
-            </div>
-
-            <div class="offcanvas-body">
-                <div class="row">
-                    <div class="col-1"></div>
-
-                    <div class="col-10">
-                        <div class="card">
-                            <img src="../images/bg.png" class="card-img" alt="Background Image">
-                            <div class="card-img-overlay d-flex align-items-center justify-content-center">
-                                <div class="card-body scrollable-card">
-
-                                    <!--required mark-->
-                                    <div class="row">
-                                        <div class="col-12 fw-bold text-end">
-                                            <p><span class="text-danger">*</span>Required</p>
-                                        </div>
-                                    </div>
-
-                                    <form action="" class="needs-validation" novalidate method="post">
-
-
-                                        <!--inventory id filed-->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-4 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="labelInventoryId">Inventory ID</span>
-                                                <input type="text" class="form-control" id="textInventoryID" readonly
-                                                    required>
-                                            </div>
-                                        </div>
-
-
-                                        <!--product id filed-->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-4 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="labelProductId">Product ID</span>
-                                                <input type="text" class="form-control" id="textProductId" readonly
-                                                    required>
-                                            </div>
-                                        </div>
-
-
-                                        <!--available quantity filed-->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-4 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="labelAvailable Quantity">Available Quantity<span
-                                                        class="text-danger">
-                                                        *</span></span>
-                                                <select id="selectAvailableQuantity" class="form-control" required>
-                                                    <option value="" disabled selected>Select Available Quantity
-                                                    </option>
-                                                </select>
-                                                <div class="invalid-feedback"> Select Available Quantity</div>
-                                            </div>
-                                        </div>
-
-
-                                        <!--total quantity -->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-4 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="labelTotalQuantity">Total Quantity<span class="text-danger">
-                                                        *</span></span>
-                                                <input type="text" class="form-control" required readonly>
-                                            </div>
-                                        </div>
-
-
-                                        <!-- stauts radiobutton-->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-4 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="labelStatus">Status<span class="text-danger">
-                                                        *</span></span>
-
-                                                <div class="form-check">
-                                                    <input class="form-check-input m-1" type="radio" name="radioStatus"
-                                                        id="radioInStock" checked>
-                                                    <label class="form-check-label" for="radioInStock">
-                                                        In Stock
-                                                    </label>
-                                                </div>
-
-                                                <div class="form-check">
-                                                    <input class="form-check-input m-1" type="radio" name="radioStatus"
-                                                        id="radioOutOfStock">
-                                                    <label class="form-check-label" for="radioOutOfStock">
-                                                        Out of Stock
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <!-- notes textarea-->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-4 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="labelNotes">Notes<span class="text-danger">
-                                                        *</span></span>
-                                                <div class="form-floating">
-                                                    <textarea class="form-control" id="textareaNotes"></textarea>
-                                                </div>
-                                            </div>
-                                        </div>
-
-
-                                        <!--create user and clear button-->
-                                        <div class="row mt-5">
-                                            <div class="col-6 text-start">
-                                                <button type="reset" id="buttonClear" value="Clear"
-                                                    class="btn btn-secondary"><i class="fa-solid fa-eraser"
-                                                        style="color: #ffffff;"></i> Clear</button>
-                                            </div>
-
-                                            <div class="col-6 text-start">
-                                                <button type="submit" id="buttonSubmit" value="Add Employee"
-                                                    class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                                        style="color: #ffffff;"></i> Add</button>
-
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     <script src="mainjsfile.js"></script>
 </body>
