--- a/production.html
+++ b/production.html
@@ -21,6 +21,15 @@
 
     <!--link font awesome css file-->
     <link rel="stylesheet" href="../../Resources/fontawesome/fontawesome-free-6.6.0/css/all.min.css">
+    <style>
+         .card-img {
+            height: 500px;
+        }
+
+        .card-innerForm {
+            height: 500px;
+        }
+    </style>
 </head>
 
 
@@ -165,7 +174,6 @@
                     <table id="tableUsers" class="table table-striped table-hover ">
                         <thead class="table-dark text-start">
                             <tr>
-                                <th>Production ID</th>
                                 <th>Pro Order ID</th>
                                 <th>Product_id</th>
                                 <th>Quantity</th>
@@ -174,7 +182,6 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -225,18 +232,6 @@
 
                                     <form action="" class="needs-validation" novalidate method="post">
 
-
-                                        <!--production id filed-->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-3 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="labelProductionId">Production ID</span>
-                                                <input type="text" class="form-control" id="textProductionId" readonly>
-                                            </div>
-                                        </div>
-
                                         <!--production order id filed-->
                                         <div class="row mt-3">
                                             <div class="input-group">
@@ -270,8 +265,8 @@
                                                     style="background-color:#343a40; color: #ffffff;"
                                                     id="labelQuantity">Quantity<span class="text-danger">
                                                         *</span></span>
-                                                <select class="form-select" id="selectQuality">
-                                                    <option selected>Select Quantity</option>
+                                                        <input type="text" class="form-control" required id="textQuantity"
+                                                        onkeyup="textElementValidator(this,'^([0-9]{1,3})$')">
                                                 </select>
                                             </div>
                                         </div>
